--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "/Timora/index.html",
+    "start_url": "/index.html",
     "background_color": "#121212",
     "display": "standalone",
     "orientation": "portrait",
